--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
                                 <a href="#contact"><button type="button" class="btn btn-primary">Hire Me</button></a>
                             </div>
                             <div class="sosmed mt-4">
-                                <ul class="list-unstyled">
+                                <ul class="list-unstyled" style="line-height:50px ;">
                                     <li class="sosmed-logo">
                                         <img src="img/fb.png" class="rounded-circle" alt="">
                                     </li>
@@ -96,6 +96,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--MASIH BERMASALAH-->
                     <div class="col-6">
                         <div class="isi-foto">
                             <img src="img/2.png" alt="Renaldi">
@@ -400,31 +401,52 @@
                   <span class="visually-hidden">Next</span>
                 </button>
             </div>
-            <div class="pembatas">
-                &raquo;
+            <div class="pembatas mt-3">
+                ~
             </div>
-            <div id="carouselExampleIndicators1" class="carousel slidee mt-5" data-aos="fade-down" data-aos-delay="200">
+            <div id="carouselExampleIndicators2" class="carousel slidee" data-aos="fade-down" data-aos-delay="100">
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="6" aria-label="Slide 7"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/Capture.PNG" class="d-block w-100" alt="...">
+                        <img src="img/Capture.png" class="img1 d-block w-100" style="height: 60%;" alt="">
+                        <div class="carousel-caption">
+                            <h3>
+                                Slicing Figma to HTML5, CSS, BOOTSTRAP
+                            </h3>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/Capture2.PNG" class="d-block w-100" alt="...">
+                        <img src="img/Capture3.png" class="d-block w-100" style="height: 60%;" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/Capture3.PNG" class="d-block w-100" alt="...">
+                        <img src="img/Capture2.PNG" class="d-block w-100" style="height: 60%;" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Capture4.PNG" class="d-block w-100" style="height: 60%;" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Capture5.png" class="d-block w-100" style="height: 60%;" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Capture6.png" class="d-block w-100" style="height: 60%;" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Capture7.png" class="d-block w-100" style="height: 60%;" alt="...">
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
