--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
                                 <a class="nav-link" href="#resume">Resume</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#portofolio">Portofolio</a>
+                                <a class="nav-link" href="#portofolio">Portfolio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
@@ -96,7 +96,6 @@
                             </div>
                         </div>
                     </div>
-                    <!--MASIH BERMASALAH-->
                     <div class="col-6">
                         <div class="isi-foto">
                             <img src="img/2.png" alt="Renaldi">
@@ -349,12 +348,12 @@
     <!--KONTEN PORTOFOLIO-->
     <div id="portofolio">
         <div class="portofolio mt-4">
-            <div class="container mb-5">
+            <div class="container">
                 <div class="portofolio-judul text-center">
-                    PORTOFOLIO
+                    PORTFOLIO
                 </div>
             </div>
-            <div id="carouselExampleIndicators" class="carousel slidee" data-aos="fade-down" data-aos-delay="100">
+            <div id="carouselExampleIndicators" class="carousel slidee mt-5" data-aos="fade-down" data-aos-delay="100">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -404,7 +403,7 @@
             <div class="pembatas mt-3">
                 ~
             </div>
-            <div id="carouselExampleIndicators2" class="carousel slidee" data-aos="fade-down" data-aos-delay="100">
+            <div id="carouselExampleIndicators2" class="carousel slidee mt-2" data-aos="fade-down" data-aos-delay="200">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -454,16 +453,80 @@
         </div>
     </div>
 
-    <!-- JS-->
-    <script src="app.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/bootstrap.bundle.js"></script>
-    <script src="js/bootstrap.min.js "></script>
-    <script src="js/bootstrap.bundle.min.js "></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js "></script>
-    <script>
-        AOS.init();
-    </script>
+    <!--KONTEN CONTACT-->
+    <div id="#contact">
+        <div class="contact mt-5">
+            <div class="container">
+                <div class="row mt-4">
+                    <div class="col text-center">
+                        <p class="contact-judul">CONTACT</p>
+                    </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col text-center">
+                        <h5 class="contact-info">Contact Saya</h5>
+                        <h5 class="hubungi-saya">Hubungi Saya</h5>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-12 col-lg-8" style="margin: auto;">
+                        <div class="email-judul">
+                            <div class="email-logo">
+                                <img src="img/pesan.png" class="rounded-circle" style="width: 60px;" alt="Pesan">
+                            </div>
+                            <div class="teks-email">
+                                Email
+                                <div class="teks-email2">
+                                    mohrenaldi19@gmail.com
+                                </div>
+                            </div>
+                        </div>
+                        <div class="email-judul mt-4">
+                            <div class="email-logo">
+                                <img src="img/telepone.png" class="rounded-circle" style="margin-left: 8px; width: 40px;" alt="Pesan">
+                            </div>
+                            <div class="teks-email" style="margin-left: 13px;">
+                                Telephone
+                                <div class="teks-email2">
+                                    085741634899
+                                </div>
+                            </div>
+                        </div>
+                        <div class="email-judul mt-4">
+                            <div class="email-logo">
+                                <img src="img/alamat.png" class="rounded-circle" style="margin-left: 8px; width: 40px;" alt="Pesan">
+                            </div>
+                            <div class="teks-email" style="margin-left: 13px;">
+                                Alamat
+                                <div class=" teks-email2 ">
+                                    Jalan Pleburan Raya Kota Semarang
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Footer-->
+        <div class="footer mt-5 ">
+            <div class="container ">
+                <p class="footer-text ">
+                    ©2023 Mohamad Renaldi Sulistiyo. All Rights Reserved
+                </p>
+            </div>
+        </div>
+
+        <!-- JS-->
+        <script src="app.js "></script>
+        <script src="js/bootstrap.js "></script>
+        <script src="js/bootstrap.bundle.js "></script>
+        <script src="js/bootstrap.min.js "></script>
+        <script src="js/bootstrap.bundle.min.js "></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js "></script>
+        <script>
+            AOS.init();
+        </script>
 
 </body>
 
