--- a/home.html
+++ b/home.html
@@ -462,13 +462,13 @@
                         <p class="contact-judul">CONTACT</p>
                     </div>
                 </div>
-                <div class="row mt-2">
+                <div class="row mt-2" data-aos="fade-down" data-aos-delay="100">
                     <div class="col text-center">
                         <h5 class="contact-info">Contact Saya</h5>
                         <h5 class="hubungi-saya">Hubungi Saya</h5>
                     </div>
                 </div>
-                <div class="row mt-5">
+                <div class="row mt-5"data-aos="fade-down" data-aos-delay="200">
                     <div class="col-12 col-lg-8" style="margin: auto;">
                         <div class="email-judul">
                             <div class="email-logo">
